# RLSuccSite

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
Feature/: ProtT5_combined.py
Models/: Predict.py  Vote.py
Utils/: exctarct_residue_fragment.py  extract_sites.py  run_extraction.py
