[project]
name = "rlsuccsite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bio==1.4.0",
    "numpy==1.24.4",
    "pandas==2.0.3",
    "protlearn==0.0.3",
    "sentencepiece>=0.2.1",
    "setuptools==65.3.0",
    "tensordict==0.2.1",
    "torch==2.1.1",
    "torchrl==0.2.1",
    "tqdm==4.66.1",
    "transformers==4.40",
]
